[gd_scene load_steps=2 format=3 uid="uid://c8d7e9f2g3h4i5j"]

[ext_resource type="Script" path="res://ui/MissionResultDialog.gd" id="1_mission_result"]

[node name="MissionResultDialog" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_mission_result")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)
mouse_filter = 2

[node name="Panel" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Root/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "GÃ¶rev Sonucu"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Mesaj"
horizontal_alignment = 1
autowrap_mode = 3

[node name="RewardsContainer" type="VBoxContainer" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ConfirmButton" type="Button" parent="Root/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Devam Et"

[connection signal="confirmed" from="." to="." method="_on_confirm_pressed"]

